--- a/src/main/resources/templates/disliked-users.html
+++ b/src/main/resources/templates/disliked-users.html
@@ -1,80 +1,80 @@
 <!DOCTYPE html>
-<html th:with="lang=${#locale.language}" th:lang="${lang}" dir="auto">
+<html dir="auto" th:lang="${lang}" th:with="lang=${#locale.language}">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-title" content="Alovoa">
-	<meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)">
-	<link rel="manifest" href="/manifest/manifest.json">
+    <meta charset="utf-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="Alovoa" name="apple-mobile-web-app-title">
+    <meta content="#121212" media="(prefers-color-scheme: dark)" name="theme-color">
+    <link href="/manifest/manifest.json" rel="manifest">
 
-	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
-	<th:block th:replace="fragments.html::bulma"></th:block>
-	<th:block th:replace="fragments.html::ui-design"></th:block>
-	<link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
-	<link rel="stylesheet" href="/css/lib/css-loaders.css" />
-	<link rel="stylesheet" href="/css/lib/modal-fx.min.css" />
-	<link rel="stylesheet" href="/css/lib/swiper.min.css" />
-	<link rel="stylesheet" href="/css/lib/animate.min.css" />
-	<link rel="stylesheet" href="/css/alovoa.css" />
-	<link rel="stylesheet" href="/css/user-profile.css" />
-	<link rel="stylesheet" href="/css/notification.css" />
-	<title th:text="#{disliked-users.title}"></title>
+    <link href="/css/lib/bulma.min.css" rel="stylesheet"/>
+    <th:block th:replace="fragments.html::bulma"></th:block>
+    <th:block th:replace="fragments.html::ui-design"></th:block>
+    <link href="/css/lib/bulma-slider.min.css" rel="stylesheet"/>
+    <link href="/css/lib/css-loaders.css" rel="stylesheet"/>
+    <link href="/css/lib/modal-fx.min.css" rel="stylesheet"/>
+    <link href="/css/lib/swiper.min.css" rel="stylesheet"/>
+    <link href="/css/lib/animate.min.css" rel="stylesheet"/>
+    <link href="/css/alovoa.css" rel="stylesheet"/>
+    <link href="/css/user-profile.css" rel="stylesheet"/>
+    <link href="/css/notification.css" rel="stylesheet"/>
+    <title th:text="#{disliked-users.title}"></title>
 </head>
 
 <body>
-	<div class="loader-parent" id="preloader-parent" style="display: flex">
-		<div class="loader" id="preloader"></div>
-	</div>
-	<div id="main-logged-in">
-		<header th:insert="fragments.html::header-logged-in"></header>
-		<section class="container" id="main-container">
-			<div class="section">
-				<div class="container container-narrow" style="width: 100%;">
-					<div class="card is-horizontal notification-card" th:each="user : ${users}" style="width: 100%;"
-						th:onclick="viewProfile([[${user.idEncoded}]])">
-						<div class="card-image">
-							<figure class="image">
-								<img th:src="${user.profilePicture}" class="profile-pic" style="margin: 0;">
-							</figure>
-						</div>
-						<div class="card-content">
-							<div class="notification-div full-width"
-								style="height: 100%; display: flex; line-height: initial; align-items: center; justify-content: center;">
-								<div>
-									<span th:text="${user.firstName + ', ' + user.age}"></span>
-								</div>
-							</div>
-						</div>
+<div class="loader-parent" id="preloader-parent" style="display: flex">
+    <div class="loader" id="preloader"></div>
+</div>
+<div id="main-logged-in">
+    <header th:insert="fragments.html::header-logged-in"></header>
+    <section class="container" id="main-container">
+        <div class="section">
+            <div class="container container-narrow" style="width: 100%;">
+                <div class="card is-horizontal notification-card" style="width: 100%;" th:each="user : ${users}"
+                     th:onclick="viewProfile([[${user.idEncoded}]])">
+                    <div class="card-image">
+                        <figure class="image">
+                            <img class="profile-pic" style="margin: 0;" th:src="${user.profilePicture}">
+                        </figure>
+                    </div>
+                    <div class="card-content">
+                        <div class="notification-div full-width"
+                             style="height: 100%; display: flex; line-height: initial; align-items: center; justify-content: center;">
+                            <div>
+                                <span th:text="${user.firstName + ', ' + user.age}"></span>
+                            </div>
+                        </div>
+                    </div>
 
-					</div>
-				</div>
-			</div>
-		</section>
-	</div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
 
-	<div class="loader-parent" id="loader-parent">
-		<div class="loader" id="loader"></div>
-	</div>
-	
-	<div id="user-profile-container"></div>
+<div class="loader-parent" id="loader-parent">
+    <div class="loader" id="loader"></div>
+</div>
 
-	<footer th:replace="fragments.html::navigation"></footer>
+<div id="user-profile-container"></div>
 
-	<script src="/sw.js"></script>
-	<script src="/js/lib/fontawesome.all.js"></script>
-	<script src="/js/lib/jquery.min.js"></script>
-	<script src="/js/lib/modal-fx.min.js"></script>
-	<script src="/js/lib/swiper.min.js"></script>
-	<script src="/js/lib/bulma-toast.min.js"></script>
-	<script src="/js/tools/get-notification.js"></script>
-	<script src="/js/tools/get-text.js"></script>
-	<script src="/js/tools/loader.js"></script>
-	<script src="/js/tools/modal.js"></script>
-	<script src="/js/alovoa.js"></script>
-	<script src="/js/user-profile-modal.js"></script>
+<footer th:replace="fragments.html::navigation"></footer>
+
+<script src="/sw.js"></script>
+<script src="/js/lib/fontawesome.all.js"></script>
+<script src="/js/lib/jquery.min.js"></script>
+<script src="/js/lib/modal-fx.min.js"></script>
+<script src="/js/lib/swiper.min.js"></script>
+<script src="/js/lib/bulma-toast.min.js"></script>
+<script src="/js/tools/get-notification.js"></script>
+<script src="/js/tools/get-text.js"></script>
+<script src="/js/tools/loader.js"></script>
+<script src="/js/tools/modal.js"></script>
+<script src="/js/alovoa.js"></script>
+<script src="/js/user-profile-lib.js"></script>
 </body>
 
 </html>
