--- a/src/main/resources/templates/donate.html
+++ b/src/main/resources/templates/donate.html
@@ -1,74 +1,76 @@
 <!DOCTYPE html>
-<html th:with="lang=${#locale.language}" th:lang="${lang}" dir="auto">
+<html dir="auto" th:lang="${lang}" th:with="lang=${#locale.language}">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-title" content="Alovoa">
-	<meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)">
-	<link rel="manifest" href="/manifest/manifest.json">
+    <meta charset="utf-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="Alovoa" name="apple-mobile-web-app-title">
+    <meta content="#121212" media="(prefers-color-scheme: dark)" name="theme-color">
+    <link href="/manifest/manifest.json" rel="manifest">
 
-	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
-	<th:block th:replace="fragments.html::bulma"></th:block>
-	<th:block th:replace="fragments.html::ui-design"></th:block>
-	<link rel="stylesheet" href="/css/lib/css-loaders.css" />
-	<link rel="stylesheet" href="/css/lib/modal-fx.min.css" />
-	<link rel="stylesheet" href="/css/lib/swiper.min.css" />
-	<link rel="stylesheet" href="/css/lib/animate.min.css" />
-	<link rel="stylesheet" href="/css/alovoa.css" />
-	<link rel="stylesheet" href="/css/user-profile.css" />
-	<link rel="stylesheet" href="/css/search.css" />
-	<link rel="stylesheet" href="/css/donate.css" />
-	<title th:text="#{donate.title}"></title>
+    <link href="/css/lib/bulma.min.css" rel="stylesheet"/>
+    <th:block th:replace="fragments.html::bulma"></th:block>
+    <th:block th:replace="fragments.html::ui-design"></th:block>
+    <link href="/css/lib/css-loaders.css" rel="stylesheet"/>
+    <link href="/css/lib/modal-fx.min.css" rel="stylesheet"/>
+    <link href="/css/lib/swiper.min.css" rel="stylesheet"/>
+    <link href="/css/lib/animate.min.css" rel="stylesheet"/>
+    <link href="/css/alovoa.css" rel="stylesheet"/>
+    <link href="/css/user-profile.css" rel="stylesheet"/>
+    <link href="/css/search.css" rel="stylesheet"/>
+    <link href="/css/donate.css" rel="stylesheet"/>
+    <title th:text="#{donate.title}"></title>
 </head>
 
 <body>
-	<div class="loader-parent" id="preloader-parent" style="display: flex">
-		<div class="loader" id="preloader"></div>
-	</div>
-	<div id="main-logged-in">
-		<header th:insert="fragments.html::header-donate"></header>
-		<div id="donate-top-margin"></div>
-		<section class="container" id="main-container" style="margin-bottom: 52px;"></section>
-	</div>
-	
-	<div id="donate-settings-modal" class="modal modal-fx-fadeInScale">
-		<div class="modal-background" onclick="closeModal()"></div>
-		<div class="modal-content">
-			<div class="box">
-				<article class="media">
-					<div class="control radio-parent" id="donation-select">
-						<label class="radio"><input th:text="#{donate.latest-donations}" type="radio" onchange="search(1)" name="sort" checked></label>
-						<label class="radio"><input th:text="#{donate.largest-donations}" type="radio" onchange="search(2)" name="sort"></label>
-					</div>
-				</article>
-			</div>
-		</div>
-	</div>
+<div class="loader-parent" id="preloader-parent" style="display: flex">
+    <div class="loader" id="preloader"></div>
+</div>
+<div id="main-logged-in">
+    <header th:insert="fragments.html::header-donate"></header>
+    <div id="donate-top-margin"></div>
+    <section class="container" id="main-container" style="margin-bottom: 52px;"></section>
+</div>
 
-	<div class="loader-parent" id="loader-parent">
-		<div class="loader" id="loader"></div>
-	</div>
-	
-	<div id="user-profile-container"></div>
-	
-	<footer th:replace="fragments.html::navigation"></footer>
+<div class="modal modal-fx-fadeInScale" id="donate-settings-modal">
+    <div class="modal-background" onclick="closeModal()"></div>
+    <div class="modal-content">
+        <div class="box">
+            <article class="media">
+                <div class="control radio-parent" id="donation-select">
+                    <label class="radio"><input checked name="sort" onchange="search(1)"
+                                                th:text="#{donate.latest-donations}" type="radio"></label>
+                    <label class="radio"><input name="sort" onchange="search(2)" th:text="#{donate.largest-donations}"
+                                                type="radio"></label>
+                </div>
+            </article>
+        </div>
+    </div>
+</div>
 
-	<script src="/sw.js"></script>
-	<script src="/js/lib/fontawesome.all.js"></script>
-	<script src="/js/lib/jquery.min.js"></script>
-	<script src="/js/lib/modal-fx.min.js"></script>
-	<script src="/js/lib/bulma-toast.min.js"></script>
-	<script src="/js/tools/get-notification.js"></script>
-	<script src="/js/tools/get-text.js"></script>
-	<script src="/js/lib/swiper.min.js"></script>
-	<script src="/js/tools/loader.js"></script>
-	<script src="/js/tools/modal.js"></script>
-	<script src="/js/alovoa.js"></script>
-	<script src="/js/user-profile-modal.js"></script>
-	<script src="/js/donate.js"></script>
+<div class="loader-parent" id="loader-parent">
+    <div class="loader" id="loader"></div>
+</div>
+
+<div id="user-profile-container"></div>
+
+<footer th:replace="fragments.html::navigation"></footer>
+
+<script src="/sw.js"></script>
+<script src="/js/lib/fontawesome.all.js"></script>
+<script src="/js/lib/jquery.min.js"></script>
+<script src="/js/lib/modal-fx.min.js"></script>
+<script src="/js/lib/bulma-toast.min.js"></script>
+<script src="/js/tools/get-notification.js"></script>
+<script src="/js/tools/get-text.js"></script>
+<script src="/js/lib/swiper.min.js"></script>
+<script src="/js/tools/loader.js"></script>
+<script src="/js/tools/modal.js"></script>
+<script src="/js/alovoa.js"></script>
+<script src="/js/user-profile-lib.js"></script>
+<script src="/js/donate.js"></script>
 </body>
 
 </html>
