--- a/src/main/resources/templates/message-detail.html
+++ b/src/main/resources/templates/message-detail.html
@@ -1,79 +1,83 @@
 <!DOCTYPE html>
-<html th:with="lang=${#locale.language}" th:lang="${lang}" dir="auto">
+<html dir="auto" th:lang="${lang}" th:with="lang=${#locale.language}">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-title" content="Alovoa">
-	<meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)">
-	<link rel="manifest" href="/manifest/manifest.json">
-	
-	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
-	<th:block th:replace="fragments.html::bulma"></th:block>
-	<th:block th:replace="fragments.html::ui-design"></th:block>
-	<link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
-	<link rel="stylesheet" href="/css/lib/css-loaders.css" />
-	<link rel="stylesheet" href="/css/lib/modal-fx.min.css" />
-	<link rel="stylesheet" href="/css/lib/swiper.min.css" />
-	<link rel="stylesheet" href="/css/lib/animate.min.css" />
-	<link rel="stylesheet" href="/css/alovoa.css" />
-	<link rel="stylesheet" href="/css/user-profile.css" />
-	<link rel="stylesheet" href="/css/message-detail.css" />
-	<title th:text="#{message.title}"></title>
+    <meta charset="utf-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="Alovoa" name="apple-mobile-web-app-title">
+    <meta content="#121212" media="(prefers-color-scheme: dark)" name="theme-color">
+    <link href="/manifest/manifest.json" rel="manifest">
+
+    <link href="/css/lib/bulma.min.css" rel="stylesheet"/>
+    <th:block th:replace="fragments.html::bulma"></th:block>
+    <th:block th:replace="fragments.html::ui-design"></th:block>
+    <link href="/css/lib/bulma-slider.min.css" rel="stylesheet"/>
+    <link href="/css/lib/css-loaders.css" rel="stylesheet"/>
+    <link href="/css/lib/modal-fx.min.css" rel="stylesheet"/>
+    <link href="/css/lib/swiper.min.css" rel="stylesheet"/>
+    <link href="/css/lib/animate.min.css" rel="stylesheet"/>
+    <link href="/css/alovoa.css" rel="stylesheet"/>
+    <link href="/css/user-profile.css" rel="stylesheet"/>
+    <link href="/css/message-detail.css" rel="stylesheet"/>
+    <title th:text="#{message.title}"></title>
 </head>
 <body>
-	<div class="loader-parent" id="preloader-parent" style="display: flex">
-		<div class="loader" id="preloader"></div>
-	</div>
-	<div id="main-logged-in">
-		<header th:insert="fragments.html::header-logged-in"></header>
-		<input type="hidden" id="convo-id" th:value="${convoId}">
-		<section class="container" id="main-container">
-			<div class="section">
-				<div class="container" id="top" style="display:flex;">			
-					<div class="left" style="padding-right: 12px; padding-left: 12px;"><img class="profile-pic left" th:src="${partner.profilePicture}"></div>
-					<div class="left" th:text="${partner.firstName}" id="first-name" style="word-break:break-all;  overflow: hidden; max-height: 45px; flex-grow: 1;"></div>
-					<div class="right button colored is-info" style="height: 40px; width: 40px;;" onclick="startVideoChat()"><i class="fa fa-video"></i></div>
-				</div>
-			</div>
-			<div class="section">
-				<div class="container" style="width: 100%;" id="messages-div"></div>
-			</div>
-			<div class="section">
-				<div class="container" style="width: 100%; display: flex;" id="message-send-div">
-					<input class="input is-medium" type="text"
-						id="message-send-input" placeholder="...">
-					<div id="message-send-padding"></div>
-					<button class="button colored is-info is-medium"
-						id="message-send-button" onclick="sendMessage()">
-						<i class="fa fa-paper-plane"></i>
-					</button>
-				</div>
-			</div>
-		</section>
-	</div>
-	
-	<div class="loader-parent" id="loader-parent">
-		<div class="loader" id="loader"></div>
-	</div>
-	
-	<div id="user-profile-container"></div>
+<div class="loader-parent" id="preloader-parent" style="display: flex">
+    <div class="loader" id="preloader"></div>
+</div>
+<div id="main-logged-in">
+    <header th:insert="fragments.html::header-logged-in"></header>
+    <input id="convo-id" th:value="${convoId}" type="hidden">
+    <section class="container" id="main-container">
+        <div class="section">
+            <div class="container" id="top" style="display:flex;">
+                <div class="left" style="padding-right: 12px; padding-left: 12px;"><img class="profile-pic left"
+                                                                                        th:src="${partner.profilePicture}">
+                </div>
+                <div class="left" id="first-name" style="word-break:break-all;  overflow: hidden; max-height: 45px; flex-grow: 1;"
+                     th:text="${partner.firstName}"></div>
+                <div class="right button colored is-info" onclick="startVideoChat()"
+                     style="height: 40px; width: 40px;;"><i class="fa fa-video"></i></div>
+            </div>
+        </div>
+        <div class="section">
+            <div class="container" id="messages-div" style="width: 100%;"></div>
+        </div>
+        <div class="section">
+            <div class="container" id="message-send-div" style="width: 100%; display: flex;">
+                <input class="input is-medium" id="message-send-input"
+                       placeholder="..." type="text">
+                <div id="message-send-padding"></div>
+                <button class="button colored is-info is-medium"
+                        id="message-send-button" onclick="sendMessage()">
+                    <i class="fa fa-paper-plane"></i>
+                </button>
+            </div>
+        </div>
+    </section>
+</div>
 
-	<footer th:replace="fragments.html::navigation"></footer>
+<div class="loader-parent" id="loader-parent">
+    <div class="loader" id="loader"></div>
+</div>
 
-	<script src="/sw.js"></script>
-	<script src="/js/lib/fontawesome.all.js"></script>
-	<script src="/js/lib/jquery.min.js"></script>
-	<script src="/js/lib/modal-fx.min.js"></script>
-	<script src="/js/lib/swiper.min.js"></script>
-	<script src="/js/lib/bulma-toast.min.js"></script>
-	<script src="/js/tools/get-notification.js"></script>
-	<script src="/js/tools/get-text.js"></script>
-	<script src="/js/tools/loader.js"></script>
-	<script src="/js/tools/modal.js"></script>
-	<script src="/js/alovoa.js"></script>
-	<script src="/js/message-detail.js"></script>
-	<script src="/js/user-profile-modal.js"></script>
+<div id="user-profile-container"></div>
+
+<footer th:replace="fragments.html::navigation"></footer>
+
+<script src="/sw.js"></script>
+<script src="/js/lib/fontawesome.all.js"></script>
+<script src="/js/lib/jquery.min.js"></script>
+<script src="/js/lib/modal-fx.min.js"></script>
+<script src="/js/lib/swiper.min.js"></script>
+<script src="/js/lib/bulma-toast.min.js"></script>
+<script src="/js/tools/get-notification.js"></script>
+<script src="/js/tools/get-text.js"></script>
+<script src="/js/tools/loader.js"></script>
+<script src="/js/tools/modal.js"></script>
+<script src="/js/alovoa.js"></script>
+<script src="/js/message-detail.js"></script>
+<script src="/js/user-profile-lib.js"></script>
 </body>
 </html>
