--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -1,91 +1,91 @@
 <!DOCTYPE html>
-<html th:with="lang=${#locale.language}" th:lang="${lang}" dir="auto">
+<html dir="auto" th:lang="${lang}" th:with="lang=${#locale.language}">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-title" content="Alovoa">
-	<meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)">
-	<link rel="manifest" href="/manifest/manifest.json">
+    <meta charset="utf-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="Alovoa" name="apple-mobile-web-app-title">
+    <meta content="#121212" media="(prefers-color-scheme: dark)" name="theme-color">
+    <link href="/manifest/manifest.json" rel="manifest">
 
-	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
-	<th:block th:replace="fragments.html::bulma"></th:block>
-	<th:block th:replace="fragments.html::ui-design"></th:block>
-	<link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
-	<link rel="stylesheet" href="/css/lib/css-loaders.css" />
-	<link rel="stylesheet" href="/css/lib/modal-fx.min.css" />
-	<link rel="stylesheet" href="/css/lib/swiper.min.css" />
-	<link rel="stylesheet" href="/css/lib/animate.min.css" />
-	<link rel="stylesheet" href="/css/user-profile.css" />
-	<link rel="stylesheet" href="/css/alovoa.css" />
-	<link rel="stylesheet" href="/css/notification.css" />
-	<title th:text="#{message.title}"></title>
+    <link href="/css/lib/bulma.min.css" rel="stylesheet"/>
+    <th:block th:replace="fragments.html::bulma"></th:block>
+    <th:block th:replace="fragments.html::ui-design"></th:block>
+    <link href="/css/lib/bulma-slider.min.css" rel="stylesheet"/>
+    <link href="/css/lib/css-loaders.css" rel="stylesheet"/>
+    <link href="/css/lib/modal-fx.min.css" rel="stylesheet"/>
+    <link href="/css/lib/swiper.min.css" rel="stylesheet"/>
+    <link href="/css/lib/animate.min.css" rel="stylesheet"/>
+    <link href="/css/user-profile.css" rel="stylesheet"/>
+    <link href="/css/alovoa.css" rel="stylesheet"/>
+    <link href="/css/notification.css" rel="stylesheet"/>
+    <title th:text="#{message.title}"></title>
 </head>
 
 <body>
-	<div class="loader-parent" id="preloader-parent" style="display: flex">
-		<div class="loader" id="preloader"></div>
-	</div>
-	<div id="main-logged-in">
-		<header th:insert="fragments.html::header-logged-in"></header>
-		<section class="container" id="main-container">
-			<div class="section">
-				<div class="container container-narrow" style="width: 100%;">
-					<div class="card is-horizontal messages-card" th:each="convo : ${conversations}"
-						th:onclick="viewMessageDetail(this, [[${convo.id}]])">
-						<div class="card-image">
-							<figure class="image" style="max-width: 200px; max-height: 200px; margin: 0">
-								<img th:src="${convo.userProfilePicture}" class="profile-pic"
-									th:value="${convo.userIdEncoded}">
-							</figure>
-						</div>
-						<div class="card-content" style="display: flex; justify-items: center; align-items: center;">
-							<div class="full-width profile-bottom">
-								<div class="messages-name" th:text="${convo.userName}"></div>
-								
-								<span style="overflow-wrap: normal; background-color: initial;" class="message-preview"
-									th:if="${convo.lastMessage != null}">
+<div class="loader-parent" id="preloader-parent" style="display: flex">
+    <div class="loader" id="preloader"></div>
+</div>
+<div id="main-logged-in">
+    <header th:insert="fragments.html::header-logged-in"></header>
+    <section class="container" id="main-container">
+        <div class="section">
+            <div class="container container-narrow" style="width: 100%;">
+                <div class="card is-horizontal messages-card" th:each="convo : ${conversations}"
+                     th:onclick="viewMessageDetail(this, [[${convo.id}]])">
+                    <div class="card-image">
+                        <figure class="image" style="max-width: 200px; max-height: 200px; margin: 0">
+                            <img class="profile-pic" th:src="${convo.userProfilePicture}"
+                                 th:value="${convo.userIdEncoded}">
+                        </figure>
+                    </div>
+                    <div class="card-content" style="display: flex; justify-items: center; align-items: center;">
+                        <div class="full-width profile-bottom">
+                            <div class="messages-name" th:text="${convo.userName}"></div>
+
+                            <span class="message-preview" style="overflow-wrap: normal; background-color: initial;"
+                                  th:if="${convo.lastMessage != null}">
 									
-									<th:block th:unless="${convo.lastMessage.allowedFormatting}" 
-									th:text="${#strings.abbreviate(convo.lastMessage.content,60)}" ></th:block>
+									<th:block th:text="${#strings.abbreviate(convo.lastMessage.content,60)}"
+                                              th:unless="${convo.lastMessage.allowedFormatting}"></th:block>
 									
-									<th:block th:if="${convo.lastMessage.allowedFormatting}" 
-									th:text="#{message.video-chat}" ></th:block>
+									<th:block th:if="${convo.lastMessage.allowedFormatting}"
+                                              th:text="#{message.video-chat}"></th:block>
 									
 								</span>
-							
-								<span style="overflow-wrap: normal;" class="message-preview"
-									th:unless="${convo.lastMessage != null}" th:text="#{message.match}"></span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-	</div>
 
-	<div class="loader-parent" id="loader-parent">
-		<div class="loader" id="loader"></div>
-	</div>
-	
-	<div id="user-profile-container"></div>
+                            <span class="message-preview" style="overflow-wrap: normal;"
+                                  th:text="#{message.match}" th:unless="${convo.lastMessage != null}"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
 
-	<footer th:replace="fragments.html::navigation"></footer>
+<div class="loader-parent" id="loader-parent">
+    <div class="loader" id="loader"></div>
+</div>
 
-	<script src="/sw.js"></script>
-	<script src="/js/lib/fontawesome.all.js"></script>
-	<script src="/js/lib/jquery.min.js"></script>
-	<script src="/js/lib/modal-fx.min.js"></script>
-	<script src="/js/lib/swiper.min.js"></script>
-	<script src="/js/lib/bulma-toast.min.js"></script>
-	<script src="/js/tools/get-notification.js"></script>
-	<script src="/js/tools/get-text.js"></script>
-	<script src="/js/tools/loader.js"></script>
-	<script src="/js/tools/modal.js"></script>
-	<script src="/js/alovoa.js"></script>
-	<script src="/js/message.js"></script>
-	<script src="/js/user-profile-modal.js"></script>
+<div id="user-profile-container"></div>
+
+<footer th:replace="fragments.html::navigation"></footer>
+
+<script src="/sw.js"></script>
+<script src="/js/lib/fontawesome.all.js"></script>
+<script src="/js/lib/jquery.min.js"></script>
+<script src="/js/lib/modal-fx.min.js"></script>
+<script src="/js/lib/swiper.min.js"></script>
+<script src="/js/lib/bulma-toast.min.js"></script>
+<script src="/js/tools/get-notification.js"></script>
+<script src="/js/tools/get-text.js"></script>
+<script src="/js/tools/loader.js"></script>
+<script src="/js/tools/modal.js"></script>
+<script src="/js/alovoa.js"></script>
+<script src="/js/message.js"></script>
+<script src="/js/user-profile-lib.js"></script>
 </body>
 
 </html>
