--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -146,7 +146,7 @@
 	<script src="/js/tools/loader.js"></script>
 	<script src="/js/tools/modal.js"></script>
 	<script src="/js/alovoa.js"></script>
-	<script src="/js/user-profile-modal.js"></script>
+	<script src="/js/user-profile-lib.js"></script>
 	<script src="/js/search.js"></script>
 </body>
 
