--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -26,6 +26,7 @@
 <div id="main-logged-in">
     <div id="user-profile-content">
         <th:block th:replace="fragments.html::user-profile"></th:block>
+        <th:block th:replace="fragments.html::user-profile-verification"></th:block>
     </div>
 </div>
 
