--- a/src/main/resources/static/css/user-profile.css
+++ b/src/main/resources/static/css/user-profile.css
@@ -27,7 +27,11 @@
   	z-index: 1;
 }
 
-@media screen and (max-width: 600px) {
+#verification-modal-content {
+    width: 770px;
+}
+
+@media screen and (max-width: 768px) {
 	.swiper-container-user-profile img {
 		max-height: initial;
 		max-width: initial;
@@ -39,12 +43,6 @@
 	.swiper-container-user-profile {
 		margin-top: 0px !important;
 	}
-}
-
-@media screen and (max-width: 768px) {
-	#user-profile-content .box, #user-profile-content .section {
-		padding: 0px;
-	}
 	.container .content {
 		padding: 1.5rem 1.5rem;
 	}
@@ -54,7 +52,28 @@
 	.swiper-container-user-profile {
 		margin-top: 12px;
 	}
+    #verification-modal-content {
+        width: 100%;
+        padding: 1.25rem;
+    }
+    #verification-modal-box {
+        padding: 2.45rem;
+    }
+    #verification-modal-section {
+        padding: 3rem 1.5rem;
+    }
 }
 
+@media screen and (max-width: 584px) {
+    #verification-modal-content {
+        padding: 12px;
+    }
+    #verification-modal-box {
+        padding: 12px;
+    }
+    #verification-modal-section {
+        padding: 4xp;
+    }
+}
 
 
